--- a/README.rdoc
+++ b/README.rdoc
@@ -3,6 +3,8 @@
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
+Added a line for no reason.
+
 Things you may want to cover:
 
 * Ruby version
